
    o	The GNOME interface was in some circumstances failing if run
	from a menu -- it needed to always specify that R be interactive.

    o	depMtrxToStrings (part of pkgDepends) applied nrow() to a
        non-matrix and aborted on the result.

    o   Fix some issues with nonsyntactical names in modelling code
        (PR#7202), relating to backquoting.  There are likely more.




	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.1 Patched


INSTALLATION ISSUES

    o	Installation will now work even in Norwegian and Danish locales
	which sort AA at the end (for package stats4 which has AAA.R).


BUG FIXES

    o	Various memory leaks have been plugged and uses of strcpy()
	with overlapping src and dest corrected.

    o	R CMD INSTALL now also works for /bin/sh's such as the one from
	Solaris 8 which fail when a function has the same name as a variable.

    o	The Date method for trunc() failed.

    o	window() failed if both start and end were outside the time
	range of the original series (possible if extend = TRUE).

    o	coplot(..) doesn't give an extraneous warning anymore when called
	on a fresh device.

    o	hasArg() used wrong logic to get the parent function. (sys.function()
	behaves differently from what is documented.)

    o	prompt(f) now gives proper \usage{..} for
	f <- function(x, g = function(u) { v <- u^2 ; sin(v)/v }) { g(x) }

    o	package.skeleton() now uses the supplied name in the DESCRIPTION
	file.

    o	options(list('digits', 'scipen')) no longer seg.faults, the
	problem being the misuse of a list (PR#7078).

    o	summary.Date() now has a more sensible default for 'digits'.

    o	list.files(all.files = TRUE, recursive = TRUE) died on infinite
	recursion. (PR#7100)

    o	cor(as.array(c(a=1,b=2)), cbind(1:2)) no longer seg.faults (PR#7116).